# GhostAgency

./: .env.example  .gitignore  ACQUIRE_REQUIREMENTS.md  ACQUIRE_ROADMAP.md  AGENTS.md  DASHBOARD_TEST_README.md  GHOST_AGENCY.md  README.md  final_dashboard_test.py  ghost_agency_employees.py  install.sh  proper_server.py  pyproject.toml  requirements.txt  robust_server.py  run_api.py  run_dashboard.py  test_agent_data_integration.py
.github/workflows/: ci.yml  deploy.yml
.opencode/plans/: upgradation-plan.md
demo/: run_demo.py
ghostagency/agents/squad_content/: __init__.py  content_social_media.py
ghostagency/api/: main.py
ghostagency/core/: agent_registry.py  base_agent.py  config.py  exceptions.py  logger.py  settings_db.py  templates.py
ghostagency/demo/: run_demo.py  run_squad_demo.py
ghostagency/integrations/: gumroad.py  llm_client.py  nim_client.py  ollama_fallback.py
ghostagency/kb/: loader.py
ghostagency/scripts/: list_agents.py  validate_registry.py
scripts/: list_agents.py  validate_registry.py
static/css/: brutalist.css
static/js/: brutalist.js
templates/: agents.html  base.html  clients.html  index.html  landing.html  settings.html  stats.html
templates/macros/: cards.html
tests/: conftest.py  test_dashboard.py  test_dashboard_integration.py  test_settings.py
tests/providers/: test_providers.py
tests/squads/: test_squad_content.py  test_squad_custom.py  test_squad_data.py  test_squad_dev.py  test_squad_finance.py  test_squad_hr.py  test_squad_legal.py  test_squad_sales.py  test_squad_support.py
(+37 files in other folders)
